feat: new UI components, route management, and optimizer updates\n\n- Add RouteManagement component and wire into dashboard\n- Update TruckResults and API typing\n- Improve backend optimizer and schemas\n- Update build config and deps\n- Add DEVELOPMENT_STATUS notes\n\nRefs: #new-ui #optimizer

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,7 @@ output.png
 # But keep example/template files
 !*template*.xlsx
 !*example*.xlsx
+
+# Backend generated files
+backend/_last_optimize.json
+backend/_tmp_input.xlsx
