--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+ # Env files
+ backend/.env
+ frontend/.env
+ frontend/.env.local
+ 
+ # Python
+ backend/.venv/
+ __pycache__/
+ *.pyc
+ 
+ # Node
+ frontend/node_modules/
+ frontend/dist/
+ 
+ # OS/editor
+ .DS_Store
+ Thumbs.db
+ .vscode/
 # Python
 __pycache__/
 *.py[cod]
