chore(frontend): include vite/client types in tsconfig for import.meta.env

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,7 @@
             "DOM.Iterable"
         ],
         "module": "ESNext",
+        "types": ["vite/client"],
         "skipLibCheck": true,
         /* Bundler mode */
         "moduleResolution": "bundler",
