--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,8 @@ openpyxl==3.1.5
 orjson==3.10.7
 numpy==2.0.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+psycopg[binary]==3.2.1
 
 # For FastAPI file uploads
 python-multipart==0.0.9
