--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.15.0",
+        "@vercel/analytics": "^1.5.0",
         "axios": "^1.5.0",
         "lucide-react": "^0.263.1",
-        "react-dropzone": "^14.2.3"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3",
+        "react-router-dom": "^6.15.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
