--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,5 @@ python-dateutil==2.9.0.post0
 python-multipart==0.0.9
 python-dotenv==1.0.1
 psycopg[binary]==3.2.9
-
-
-
-
+requests==2.32.3
+ortools>=9.10
