--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@types/leaflet": "^1.9.20",
         "@vercel/analytics": "^1.5.0",
         "axios": "^1.5.0",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.263.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-dropzone": "^14.2.3",
+        "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.15.0"
     },
     "devDependencies": {
